@@ -11,7 +11,8 @@
     * Add Net::SSLeay::X509_NAME#add_entry_by_NID method.
     * Add Net::SSLeay::X509_NAME#delete_entry method.
     * Add Net::SSLeay::X509_CRL#new method.
-    * Add Net::SSLeay::XX509_REVOKED class.
+    * Add Net::SSLeay::X509_REVOKED class.
+    * Add Net::SSLeay::X509_REVOKED#get_REVOKED method.
   [Changes]
     * Change the default value of $namele in Net::SSLeay::X509_VERIFY_PARAM#set1_host method.
       [Before]
